web/static/css/_layout.scss
// ---------NCD general layout classes ---------------


html, body {
  @extend .grey, .lighten-3;
}


main:not(.main-welcome) {
  @include flexbox();
  flex: 1 0 auto;
  padding-bottom: 61px;
  position: relative;
  > div {
    flex: 1;
    padding-top: 90px;
  }
}

.wrapper {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  min-width: 320px;
  & > * > * {
    padding-left: 10%;
    padding-right: 10%;
  }
}

header {
  background-color: #424242;

  .logo {
    display: inline-block;
    vertical-align: top;
    padding-top: 8px;
    margin-right: 25px;
    margin-left: -85px;
    + a.breadcrumb:before {
      display: none;
    }
    .logo-container {
      background-image: url('../images/header_icon_default.svg');
      background-repeat: no-repeat;
      display: block;
      width: 60px;
      height: 60px;
    }
  }
}

#TopNav {
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #000000;
  min-width: 395px;

  ul {
    &.breadcrumb-top {
      margin-left: -15px;
    }
    a {
      color: #9e9e9e;
      i.right {
        font-size: 1.6rem;
        margin-left: 5px;
      }
      &:hover {
        @extend .transparent;
        @extend .white-text;
      }
    }
    .dropdown-content > li >  a {
      @extend .black-text;
    }
    .user-icon {
      display: none;
    }
    .user-email-dropdown {
      border-bottom: 1px solid color("grey", "lighten-1");
      cursor: default;
      display: none;
      span {
        @extend .grey-text, .lighten-2;
      }
      &:hover {
        @extend .transparent;
      }
    }
    &.user-menu a {
      max-height: 64px;
       > div {
        display: inline;
      }
    }
  }

  .breadcrumb-top {
    > li {
      position: relative;
      a {
        @extend .truncate;
        max-width: 180px;
      }
      &.breadcrumb-item:before {
        content: 'chevron_right';
        font-family: 'Material Icons';
        font-weight: 300;
        font-style: normal;
        font-size: 15px;
        line-height: 1.158;
        letter-spacing: normal;
        text-transform: none;
        text-rendering: optimizeLegibility;
        font-feature-settings: 'liga';
        color: color("grey", "darken-4");
        position: absolute;
        left: -.5rem;
        top: 38%;
      }
      &.channels-tab a {
        &:before {
          content: '';
          @extend .grey, .darken-4;
          left: 0px;
          top: 20px;
          width: 1px;
          height: 25px;
          position: absolute;
        }
      }
    }
  }
}

#MainNav {
  height: auto;
  padding-top: 1rem;
  padding-bottom: 0.3rem;

  .col {
    height: 66px;
  }

  .page-title {
    font-size: 20px;
    padding-top: 4px;
    vertical-align: middle;
    max-width: 100%;
    display: inline-block;
    i {
      @extend .grey-text, .lighten-2;
      font-size: 24px;
      display: inline-block;
      vertical-align: top;
      margin-left: 15px;
    }
  }
  .title {
    max-width: 100%;
    display: inline-block;
  }
  input#questionnaire_name {
    margin: 0;
  }
  .title-container {
    display: inline-block;
    position: relative;
    min-width: 100%;
    min-height: 80px;
    input {
      position: absolute;
      top: 0px;
      left: 0;
      width: 100%;
      margin: 0;
    }
    .title {
      max-width: 100%;
      + input {
        height: 30px;
        top: 50px;
        left: 0;
        min-width: 100%;
      }
    }
    .description {
      line-height: 20px;
      max-width: 100%;
      position: absolute;
      top: 50px;
      .page-description {
        font-size: 15px;
        font-style: italic;
        @extend .grey-text, .lighten-2;
      }
    }
  }
  span.title-options {
    vertical-align: middle;
    margin-left: 20px;
    display: inline-block;
  }
}

#BottomNav {
  height: auto;
  line-height: 1;
  .row {
    margin-bottom: 0;
  }
}


footer {
  position: absolute;
  width: 100%;
  bottom: 0;
  left: 0;
  padding-top: 1.3rem;
  padding-bottom: 1.3rem;
  .row {
    margin-bottom: 0;
  }
}

.white ~ footer {
  @extend .white;
}

.undo-buttons {
  margin-left: 4px;

  i {
    display: inline-block !important;
    margin: 0px 8px;
    cursor: pointer;
    color: color("grey", "base");
    user-select: none;

    &.disabled {
      color: color("grey", "darken-2");
    }
  }
}

